<resources>
    <string name="app_name">Cureya</string>
    <string name="start_chat_value">Write Message</string>
    <string name="attach_value">Attach</string>
    <string name="recycler_view_header">Let\'s find a companion</string>
    <string name="search">search</string>
    <string name="user_name">%s: </string>
    <string name="log_in">Log in</string>
    <string name="email_id">Email ID</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="forget_password">Forget Password?</string>
    <string name="don_t_have_an_account">Don\'t have an account? </string>
    <string name="register">Register</string>
    <string name="emoji_button">Emoji Button</string>
    <string name="camera_button">camera button</string>
    <string name="mic_button">Mic button</string>
    <string name="chat_bot_image">Chat BOT Image</string>
    <string name="back_button">Back button</string>
    <string name="options_button">Options Button</string>
    <string name="chat_image">Chat Image</string>
    <string name="user_to_chat">User to chat</string>
    <string name="user_account_profile_picture">User account profile picture</string>
    <string name="join_the_n_community">Join the\nCommunity</string>
    <string name="search_the_community">Search the community</string>
    <string name="stress">Stress</string>
    <string name="anxiety">Anxiety</string>
    <string name="paranoia">Paranoia</string>
    <string name="psychosis">Psychosis</string>
    <string name="depression">Depression</string>
    <string name="more">More</string>
    <string name="posts">Posts</string>
    <string name="members">Members</string>
    <string name="about">About</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home_text">Home Fragment</string>
    <string name="chat_fragment">Chat Fragment</string>
    <string name="chatbot_fragment">ChatBot Fragment</string>
    <string name="community_fragment">Community Fragment</string>
    <string name="aboutusdetails">CUREYA (registered as Aspexx Health solutions Pvt Ltd ) collaborated with stakeholders include - ROOTSKILLS , ROOTSAPS , World Yoga associations , Flagbits technologies and many more . The recent online webinars  are conducted by alternative practitioners that include  - Ayurveda Experts , Energy Healing experts , Mental Health Counselors  etc. CUREYA primarily objective is ‘ Health for All ‘ , by reducing the medical expenditure , eliminating the information asymmetry , promoting health awareness and achieving inclusive and holistic approach for healthcare treatments.</string>
    <string name="about_us">About Us</string>
    <string name="madeinindia">Made with love in india to empower healthcare services.</string>
    <string name="follow">Follow</string>
    <string name="follow_on">Follow on</string>
    <string name="my_feed">My Feed</string>
    <string name="share_your_thoughts">Share your thoughts</string>
    <string name="registered_already">Registered already?</string>
    <string name="name">Name</string>
    <string name="sample_message">This is a sample message that will appear</string>
    <string name="send_button">send button</string>
    <string name="confirm_user_details">Confirm User Details</string>
    <string name="continue_label">Continue</string>
    <string name="pin">PIN</string>
    <string name="change_password">Change Password</string>
    <string name="new_password">New password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="settings">Settings</string>
    <string name="my_account">My Account</string>
    <string name="support_feedback"><![CDATA[Support & Feedback]]></string>
    <string name="useful_information">Useful Information</string>
    <string name="frequently_asked_questions">Frequently Asked Questions</string>
    <string name="report_a_problem">Report a problem....</string>
    <string name="sign_out">Sign out</string>
    <string name="change_email_address">Change email address</string>
    <string name="manage_subscription">Manage Subscription</string>
    <string name="delete_account">Delete account</string>
    <string name="current_password">Current password</string>
    <string name="save">Save</string>
    <string name="ok">OK</string>
    <string name="no">NO</string>
    <string name="active_mail_id">Active mail id</string>
    <string name="enter_new_email_address">Enter New Email Address</string>
    <string name="confirm_new_email_address">Confirm New Email Address</string>
    <string name="dialog_sign_out_warning_text">This action requires authentication. Proceed to sign out?</string>
    <string name="sign_out_dialog_text">Are you sure you want to sign out?</string>
    <string name="how_safe_is_my_data">How safe is my data</string>
    <string name="submit">Submit</string>
    <string name="label_relaxation">Relaxation</string>
    <string name="let_s_find_something_for_relaxation">Let\'s find something for Relaxation</string>
    <string name="music">Music</string>
    <string name="we_recommend_you_favourite_music">We recommend you favourite music</string>
    <string name="breathe_with_mindfulness">Breathe with<br/>Mindfulness</string>
    <string name="music_seconds">%d seconds</string>
    <string name="video">Video</string>
    <string name="we_recommend_you_favorite_video">We recommend you favorite video</string>
    <string name="yoga">Yoga</string>
    <string name="help_you_to_make_schedule_for_yoga">Help you to make schedule for yoga</string>
    <string name="balasana">Balasana</string>
    <string name="ClientId">499621120056-urjqhhbjki4nluchvno5f2elf9u5rphg.apps.googleusercontent.com</string>
    <string name="write_your_post">Write your post........</string>
    <string name="hello">Hello, </string>
    <string name="note_your_mood_today">Note Your Mood Today</string>
    <string name="moods">Moods</string>
    <string name="blogs">Blogs</string>
    <string name="follow_cureya_on_social_media">Follow Cureya on Social Media</string>
    <string name="playing_now">Playing now</string>
    <string name="our_mission">Our Mission</string>
    <string name="our_vision">Our Vision</string>
    <string name="our_value_proposition">Our Value Proposition</string>
    <string name="our_achievements">Our Achievements</string>
    <string name="our_collaborations">Our Collaborations</string>
    <string name="regards_to_team_cureya">Regards To Team Cureya</string>
    <string name="our_aim">Our Aim</string>
    <string name="our_aim_para1"><b>1) Vitality in Individuality:</b> Cureya focuses on creating a safe space for you to learn,understand and get expert help on all health-related concerns. Our network of professionals provide expert solutions customized just for you.</string>
    <string name="our_aim_para2"><b>2) Everyone is Priority With Cureya:</b> We aim to increase the accessibility of high quality holistic health solutions and provide affordable solutions to all. Everyone is priority and our two-way conversation system ensures learning, healing and growing.</string>
    <string name="our_aim_para3"><b>3) Patient- Practitioner Connect:</b> Cureya focuses on the right connections and integrates patients with practitioners. Our online network of practitioners allows us to provide the right treatment, transcending barriers of geography to provide superior quality.</string>
    <string name="our_aim_para4"><b>4) Previous teachings, today solutions:</b> Our evidence based research allows us to bridge the gap between traditional and modern medical systems. By leveraging technology to revamp the traditional medical system, Cureya provides transformative healthcare.</string>
    <string name="our_aim_para5"><b>5) Priority not Privilege:</b> Cureya garners the belief that healthcare is an inclusive, fundamental right to all. Health is a priority and by making healthcare solutions accessible to all, Cureya aims to improve the standard of living for health and well being.</string>
    <string name="our_mission_text">We thrive to achieve “Health for all” and aim to have a well balanced integrated, holistic and sustainable healthcare system through health education, promotion and prevention.</string>
    <string name="our_vision_text">We thrive to create an integrated, holistic, inclusive and sustainable healthcare system providing personalized healthcare.We strive on maintaining our community of experienced professionals and transcend geographical barriers.</string>
    <string name="our_value_porp_para1">● Achieving a high quality healthcare system through a well balanced network of healthcare specialists and wellness practitioners</string>
    <string name="our_value_porp_para2">● Integrating passion and technology with innovation and marketing to increase accessibility and create a sustainable healthcare system.</string>
    <string name="our_value_porp_para3">● To create a well developed community of professionals and maintain this network with the ethos of the healthcare system, upholding the values of integrity, honesty and trust.</string>
    <string name="our_value_porp_para4">● Developing an individualistic, transformative healthcare system for patients by including customized monitoring and wellness plans.</string>
    <string name="about_us_para1">Cureya aims to develop a transformative healthcare system through a network of professionals providing affordable, expert solutions that are individualized with customized healthcare and wellness plans.</string>
    <string name="about_us_para2">● Cureya creates a safe space and focuses on enhancing Vitality by utilizing nature and the various benefits from it. Special focus is placed on cure, prevention and mitigation.</string>
    <string name="about_us_para3">● Cureya provides individualized, transformative healthcare and leverages technology to revamp the traditional medical system and globalize local knowledge. Bridging this gap allows Cureya to leverage knowledge regarding the use of indigenous medicinal plants and traditional healers through advanced technologies and sustaining the global interest towards natural healing and organic solutions.</string>
    <string name="about_us_para4">● The new wave of natural healing and herbal medicines creates a need for learning and trends indicate a high demand towards holistic healthcare solutions. Cureya fulfills this through evidence based research incorporated in clinical practice and transcends barriers of geography by the usage of modern technology.</string>
    <string name="our_achievements_para1">● DPIIT Certified</string>
    <string name="our_achievements_para2">● Collaborated with prestigious universities. (IIT’s, NIT’s, IIM’s, Central Universities and more)</string>
    <string name="our_achievements_para3">● Launched AI Mental Health Chatbot for individualized care on Google Play Store</string>
    <string name="our_achievements_para4">● Conducted 20+ National and International Live Webinars with experienced doctors.</string>
    <string name="our_achievements_para5">● Member of INO (International Naturopathy Organization), Google Women Founders Group, Stanford Rebuild, NASSCOM &amp; ASSOCHAM</string>
    <string name="our_achievements_para6">● Provide online internship programs for engineering and medical students on AI-ML-DS-PYTHON</string>
    <string name="our_achievements_para7">● 1500+ students have become part of the Cureya Online Internship Program</string>
    <string name="our_achievements_para8">● Interns working all over India with team sizes over 150 in over 10 departments.</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="lgbtq">LGBTQ</string>
</resources>