<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <RadioGroup
        android:id="@+id/radioGroup"
        android:checkedButton="@+id/radio_button_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <RadioButton
            android:id="@+id/male"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/male"/>
        <RadioButton
            android:id="@+id/female"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/female"/>
        <RadioButton
            android:id="@+id/lgbtq"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/lgbtq"/>
    </RadioGroup>

</LinearLayout>