<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:baselineAligned="false"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/app_bar"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="10dp"
        android:background= "@drawable/rectangle"
        >
        <ImageView
            android:layout_marginStart="15dp"
            android:id="@+id/back"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/back_icon"
            android:contentDescription="@string/back_button" />
        <ImageView
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:id="@+id/cureya"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_margin="10dp"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:src="@drawable/chatbot"
            android:contentDescription="@string/chat_bot_image" />
        <ImageView
            android:layout_marginEnd="15dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:id="@+id/menu"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/menu_icon"
            android:contentDescription="@string/options_button" />
    </androidx.constraintlayout.widget.ConstraintLayout>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/welcome_message"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="15dp"
        android:layout_below="@id/app_bar"
        >
        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:listitem="@layout/layout_message"
            android:visibility="gone"
            />
        <TextView
            android:id="@+id/time"
            android:textColor="@color/black"
            android:textSize="13sp"
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toTopOf="@id/welcome_message"
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            tools:text="Time"
            />
        <TextView
            android:id="@+id/welcome"
            android:layout_marginTop="6dp"
            app:layout_constraintTop_toBottomOf="@id/time"
            android:textColor="@color/black"
            android:textSize="13sp"
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            tools:text="Welcome Username"
            />
        <ImageView
            android:id="@+id/chatbot"
            android:layout_marginTop="15dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_width="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/welcome"
            android:layout_height="100dp"
            android:src="@drawable/chatbot"
            android:contentDescription="@string/chat_bot_image" />
        <TextView
            android:id="@+id/Intro"
            android:layout_marginTop="44dp"
            android:textColor="@color/black"
            android:textSize="13sp"
            app:layout_constraintTop_toBottomOf="@id/chatbot"
            android:layout_width="220dp"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            tools:text="My name bot name, I am here to help you  with the problems "
            />


        <androidx.constraintlayout.widget.ConstraintLayout
            app:layout_constraintBottom_toBottomOf="@id/welcome_message"
            android:layout_width="match_parent"
            android:layout_marginHorizontal="15dp"
            android:layout_height="wrap_content">
            <ImageView
                android:contentDescription="@string/emoji_button"
                android:id="@+id/emoji"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/chat_emoji"
                />
            <EditText
                android:id="@+id/chatbar"
                android:hint="@string/start_chat_value"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_width="260dp"
                android:layout_height="40dp"
                app:layout_constraintLeft_toRightOf="@id/emoji"
                app:layout_constraintRight_toLeftOf="@id/attach"
                android:inputType="text"
                android:autofillHints="name" />
            <ImageView
                android:id="@+id/attach"
                app:layout_constraintLeft_toRightOf="@id/chatbar"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:clickable="true"
                android:focusable="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/chat_attach"
                android:contentDescription="@string/attach_value" />
            <ImageView
                android:id="@+id/camera"
                app:layout_constraintLeft_toRightOf="@id/attach"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_camera"
                android:contentDescription="@string/camera_button" />
            <ImageView
                android:id="@+id/mic"
                app:layout_constraintLeft_toRightOf="@id/camera"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/chat_mic"
                android:contentDescription="@string/mic_button" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</RelativeLayout>
